# spring-server-generated/src/main/java/io/swagger/api/PizzaApi.java
@@ -1,44 +1,0 @@
-/**
- * NOTE: This class is auto generated by the swagger code generator program (2.4.8).
- * https://github.com/swagger-api/swagger-codegen
- * Do not edit the class manually.
- */
-package io.swagger.api;
-
-import io.swagger.annotations.*;
-import io.swagger.model.Pizza;
-import javax.validation.Valid;
-import javax.validation.constraints.*;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
-
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2019-10-19T05:03:41.076Z")
-
-@Api(value = "pizza", description = "the pizza API")
-public interface PizzaApi {
-
-    @ApiOperation(value = "adds pizza", nickname = "addPizza", notes = "Adds pizza to the system", tags={ "pizza", })
-    @ApiResponses(value = { 
-        @ApiResponse(code = 201, message = "item created"),
-        @ApiResponse(code = 400, message = "invalid input, object invalid"),
-        @ApiResponse(code = 409, message = "an existing item already exists") })
-    @RequestMapping(value = "/pizza/",
-        produces = { "application/json" }, 
-        consumes = { "application/json" },
-        method = RequestMethod.POST)
-    ResponseEntity<Void> addPizza(@ApiParam(value = "Pizza to add") @Valid @RequestBody Pizza pizza);
-
-
-    @ApiOperation(value = "get a pizza", nickname = "getAPizza", notes = "Get pizza by Id ", response = Pizza.class, tags={ "pizza", })
-    @ApiResponses(value = {
-        @ApiResponse(code = 200, message = "search results matching criteria", response = Pizza.class),
-        @ApiResponse(code = 400, message = "bad input parameter") })
-    @RequestMapping(value = "/pizza/{id}",
-        method = RequestMethod.GET)
-    ResponseEntity<Pizza> getAPizza(
-        @ApiParam(value = "pizza id", required = true) @PathVariable("id") String id);
-
-}
