# spring-server-generated/src/main/resources/api/api.yaml
@@ -46,6 +46,8 @@ paths:
       responses:
         201:
           description: item created
+          schema:
+            $ref: '#/definitions/Pizza'
         400:
           description: invalid input, object invalid
         409:
@@ -65,6 +67,8 @@ paths:
       operationId: getAPizza
       description: |
         Get pizza by Id
+      produces:
+        - application/json
       responses:
         200:
           description: search results matching criteria
@@ -151,6 +155,8 @@ paths:
       responses:
         201:
           description: item created
+          schema:
+            $ref: '#/definitions/Order'
         400:
           description: invalid input, object invalid
         409:
@@ -169,6 +175,8 @@ paths:
       operationId: getAOrder
       description: |
         Get order by Id
+      produces:
+        - application/json
       responses:
         200:
           description: search results matching criteria
